maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: too many arguments for method expandPath: (x: Int, y: Int)Unit
				expandPath(x,y,0)
                                          ^JediEscaper:16: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
	var i = getIndication
                ^